# it-tools

./: capacitor.config.ts  package.json  pnpm-lock.yaml
android/app/src/main/res/values/: strings.xml
locales/: en.yml  zh.yml
src-tauri/: Cargo.toml  tauri.conf.json
src/tools/hash-text/: hash-text.service.ts  hash-text.vue  index.ts
