[package]
name = "IT-Tools"
version = "0.2.0"
description = "Useful tools for developer and people working in IT"
authors = ["Corentin Thomasset"]
license = "GPLv3"
repository = "https://github.com/boltomli/it-tools"
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
